# Sintezia

./: CMakeLists.txt
assets/: Sintézia - GDD.md  items.json  npcs.json  recipes.json
assets/maps/: Beach_Tile.tsx  Cliff_Tile.tsx  FarmLand_Tile.tsx  Path_Middle.tsx  TilesetDungeon.tsx  TilesetHouse.tsx  TilesetReliefDetail.tsx  TilesetWater.tsx  Water_Middle.tsx  Water_Tile.tsx  example_map.json  lavaTileset.tsx  mapa_de_teste.json  mapa_de_teste.tmj
assets/tiled/: tp.tiled-session
assets/tiled/maps/: mapa_de_teste.tmx
assets/tiled/tilesets/: Beach_Tile.tsx  Boy.tsx  Cat.tsx  Cavegirl.tsx  Cliff_Tile.tsx  DemonGreen.tsx  DialogBoxFaceset.tsx  Extra tiles.tsx  FarmLand_Tile.tsx  Oak_Tree.tsx  Path_Middle.tsx  Path_Tile.tsx  Player.tsx  Skeleton.tsx  TilesetDungeon.tsx  TilesetFloor.tsx  TilesetHouse.tsx  TilesetReliefDetail.tsx  TilesetWater.tsx  Water_Middle.tsx  Water_Tile.tsx  lavaTileset.tsx
shaders/: rect.vert  text.frag  vertex.vert
src/: MathUtils.cpp  main.cpp
src/Actor/: Actor.cpp  Actor.hpp  DialogNPC.cpp  DialogNPC.hpp  ItemActor.cpp  ItemActor.hpp  NPC.cpp  NPC.hpp  PatrolNPC.cpp  PatrolNPC.hpp  Player.cpp  Player.hpp  TestAggressivePatrolNPC.cpp  TestNPC.cpp  TestNPC.hpp  TestPassivePatrolNPC.cpp  TestPassivePatrolNPC.hpp  TestShopkeeperNPC.cpp  TextActor.cpp
src/Actor/NPC/: DialogNPC.cpp  DialogNPC.hpp  NPC.cpp  NPC.hpp  PatrolNPC.cpp  PatrolNPC.hpp  TestAggressivePatrolNPC.cpp  TestAggressivePatrolNPC.hpp  TestPassivePatrolNPC.cpp  TestShopkeeperNPC.cpp  TestShopkeeperNPC.hpp
src/Actor/NPC/Base/: DialogNPC.cpp  DialogNPC.hpp  NPC.cpp  NPC.hpp  PatrolNPC.cpp  PatrolNPC.hpp
src/Actor/NPC/Concrete/: CatNPC.cpp  CatNPC.hpp  GenericNPC.cpp  GenericNPC.hpp  TestAggressivePatrolNPC.cpp  TestAggressivePatrolNPC.hpp  TestPassivePatrolNPC.cpp  TestPassivePatrolNPC.hpp  TestShopkeeperNPC.cpp  TestShopkeeperNPC.hpp
src/AudioSystem/: AudioSystem.cpp  AudioSystem.h
src/Component/: AnimationComponent.cpp  AnimationComponent.hpp  AttackComponent.cpp  AttackComponent.hpp  Component.cpp  HealthComponent.cpp  HealthComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  PlayerInputComponent.cpp  PlayerInputComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp
src/Core/: Camera.cpp  Camera.hpp  RenderUtils.hpp
src/Core/RectRenderer/: RectRenderer.cpp  RectRenderer.hpp
src/Core/TextRenderer/: TextRenderer.cpp  TextRenderer.hpp
src/Core/Texture/: SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp
src/Crafting/: Crafting.cpp  Crafting.hpp  Item.cpp  Item.hpp
src/Font/: FontManager.cpp  FontManager.hpp  SDLFont.cpp  SDLFont.hpp  SimpleFont.cpp  SimpleFont.hpp
src/Game/: Game.cpp  Game.hpp  Inventory.cpp  Inventory.hpp  ItemGenerator.cpp  ItemGenerator.hpp
src/Map/: MapHelper.cpp  MapHelper.hpp  TileMap.cpp  TileMap.hpp  TiledParser.cpp  TiledParser.hpp
src/Shader/: ShaderProgram.cpp  ShaderProgram.hpp
src/UI/: InventoryUI.cpp  InventoryUI.hpp  MainMenu.cpp  MainMenu.h  NPCDialogUI.cpp  NPCDialogUI.hpp
